"fix: fixed the labels"

--- a/views/Covid/covid.html
+++ b/views/Covid/covid.html
@@ -17,17 +17,17 @@
 
           <div>
             <input type="radio" id="office" name="work" value="office" />
-            <label>From Sairme Office</label>
+            <label for="office">From Sairme Office</label>
           </div>
 
           <div>
             <input type="radio" id="home" name="work" value="home" />
-            <label>From Home</label>
+            <label for="home">From Home</label>
           </div>
 
           <div>
             <input type="radio" id="hybrid" name="work" value="hybrid" />
-            <label>Hybrid</label>
+            <label for = "hybrid">Hybrid</label>
           </div>
           <span id="work-error"><i>* Required</i></span>
         </form>
@@ -37,12 +37,12 @@
 
           <div>
             <input type="radio" id="covid_yes" name="covid" value="yes"  />
-            <label>Yes</label>
+            <label for="covid_yes">Yes</label>
           </div>
 
           <div>
             <input type="radio" id="covid_no" name="covid" value="no"  />
-            <label>No</label>
+            <label for="covid_no">No</label>
           </div>
           <span id="work-error"><i>* Required</i></span>
         </form>
@@ -58,12 +58,12 @@
 
           <div>
             <input type="radio" id="vaccine_yes"  name="vaccine" value="yes" />
-            <label>Yes</label>
+            <label for="vaccine_yes">Yes</label>
           </div>
 
           <div>
             <input type="radio" id="vaccine_no" name="vaccine" value="no"  />
-            <label>No</label>
+            <label for="vaccine_no">No</label>
           </div>
           <span id="work-error"><i>* Required</i></span>
         </form>
@@ -76,7 +76,7 @@
   
       <div class="step-buttons">
         <a href="/views/Skills/skills.html">
-          <img src="/assets/previous.png" alt="Prev icon" />
+          <img src="/roketeer-ii/assets/previous.png" alt="Prev icon" />
         </a>
 
         <div class="pages pages-active"></div>
@@ -86,7 +86,7 @@
         <div class="pages"></div>
 
         <a id="button" >
-          <img src="/assets/next.png" alt="Next icon" />
+          <img src="/roketeer-ii/assets/next.png" alt="Next icon" />
         </a>
       </div>
     </div>
