--- a/views/Covid/covid.html
+++ b/views/Covid/covid.html
@@ -76,7 +76,7 @@
   
       <div class="step-buttons">
         <a href="/views/Skills/skills.html">
-          <img src="/roketeer-ii/assets/previous.png" alt="Prev icon" />
+          <img src="../../assets/previous.png" alt="Prev icon" />
         </a>
 
         <div class="pages pages-active"></div>
@@ -86,7 +86,7 @@
         <div class="pages"></div>
 
         <a id="button" >
-          <img src="/roketeer-ii/assets/next.png" alt="Next icon" />
+          <img src="../../assets/next.png" alt="Next icon" />
         </a>
       </div>
     </div>
