"feat: add localstorage functionality"

--- a/views/Covid/covid.html
+++ b/views/Covid/covid.html
@@ -16,12 +16,12 @@
           <p class="question">How would you prefer to work?</p>
 
           <div>
-            <input type="radio" id="office" name="work" value="office" />
+            <input type="radio" id="office" name="work" value="from_office" />
             <label for="office">From Sairme Office</label>
           </div>
 
           <div>
-            <input type="radio" id="home" name="work" value="home" />
+            <input type="radio" id="home" name="work" value="from_home" />
             <label for="home">From Home</label>
           </div>
 
@@ -36,12 +36,12 @@
           <p class="question">Did you contact covid 19? :(</p>
 
           <div>
-            <input type="radio" id="covid_yes" name="covid" value="yes"  />
+            <input type="radio" id="covid_yes" name="covid" value="true"  />
             <label for="covid_yes">Yes</label>
           </div>
 
           <div>
-            <input type="radio" id="covid_no" name="covid" value="no"  />
+            <input type="radio" id="covid_no" name="covid" value="false"  />
             <label for="covid_no">No</label>
           </div>
           <span id="work-error"><i>* Required</i></span>
@@ -57,12 +57,12 @@
           <p class="question">Have you been vaccinated?</p>
 
           <div>
-            <input type="radio" id="vaccine_yes"  name="vaccine" value="yes" />
+            <input type="radio" id="vaccine_yes"  name="vaccine" value="true" />
             <label for="vaccine_yes">Yes</label>
           </div>
 
           <div>
-            <input type="radio" id="vaccine_no" name="vaccine" value="no"  />
+            <input type="radio" id="vaccine_no" name="vaccine" value="false"  />
             <label for="vaccine_no">No</label>
           </div>
           <span id="work-error"><i>* Required</i></span>
