--- a/views/Covid/covid.html
+++ b/views/Covid/covid.html
@@ -75,7 +75,7 @@
       </div>
 
       <div class="step-buttons">
-        <a href="/views/Skills/skills.html">
+        <a href="../Skills/skills.html">
           <img src="../../assets/previous.png" alt="Prev icon" />
         </a>
 
