--- a/views/Covid/covid.html
+++ b/views/Covid/covid.html
@@ -79,11 +79,15 @@
           <img src="../../assets/previous.png" alt="Prev icon" />
         </a>
 
-        <div class="pages pages-active"></div>
-        <div class="pages pages-active"></div>
-        <div class="pages"></div>
-        <div class="pages"></div>
-        <div class="pages"></div>
+        <a href="../Personal/personal.html"
+          ><div class="pages pages-active"></div
+        ></a>
+        <a href="../Skills/skills.html"
+          ><div class="pages pages-active"></div
+        ></a>
+        <a><div class="pages pages-active"></div></a>
+        <a id="insights-page"><div class="pages"></div></a>
+        <a><div class="pages"></div></a>
 
         <a id="button">
           <img src="../../assets/next.png" alt="Next icon" />
